cmake_minimum_required(VERSION 3.15)
project(testing C)

set(CMAKE_C_STANDARD 99)

add_executable(proj3B /Users/jacobrammer/Documents/CIS212/Project3/b/proj3B.c)
add_executable(proj3C /Users/jacobrammer/Documents/CIS212/Project3/c/proj3C.c)
add_executable(proj3D /Users/jacobrammer/Documents/CIS212/Project3/d/proj3D.c)
add_executable(proj3A /Users/jacobrammer/Documents/CIS212/Project3/a/proj3A.c)
add_executable(stacks /Users/jacobrammer/Documents/CIS212/Final/stacks.c)
add_executable(queues /Users/jacobrammer/Documents/CIS212/Final/queues.c)